<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculator">

    <LinearLayout
        android:id="@+id/linearLayoutInputOperand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8pt"
        android:layout_marginRight="8pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/firstOperandET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8pt"
            android:hint="@string/firstOperandHintET"
            android:layout_weight="1"
            tools:ignore="Autofill,TextFields" />
        <EditText
            android:id="@+id/secondOperandET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8pt"
            android:hint="@string/secondOperandHintET"
            android:layout_weight="1"
            tools:ignore="Autofill,TextFields" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutChoiceOperator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8pt"
        android:layout_marginRight="8pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutInputOperand"
        app:layout_constraintVertical_bias="0.1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSumBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textSumBTN"
            android:textSize="22sp"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/buttonDifBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textDifBTN"
            android:textSize="22sp"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/buttonMultBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textMultBTN"
            android:textSize="22sp"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/buttonDivBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textDivBTN"
            android:textSize="22sp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <Button
        android:id="@+id/resultBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutChoiceOperator"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_weight="1"
        android:text="@string/textResultBTN"
        android:textSize="22sp"/>

    <TextView
        android:id="@id/resultTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textResultTV"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resultBTN"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>